# elfin_robot

./: .travis.yml  LICENSE.txt  README.md
docs/: ROS_Industrial_driver.md
elfin_driver/: CMakeLists.txt  README.md  package.xml
elfin_driver/include/elfin_driver/: elfin_joint_trajectory_downloader.h  elfin_robot_joint_relay_handler.h  elfin_robot_state_interface.h  elfin_robot_status_relay_handler.h
elfin_driver/launch/: elfin5.launch  robot_interface.launch
elfin_driver/src/: elfin_joint_downloader_node.cpp  elfin_joint_trajectory_downloader.cpp  elfin_robot_joint_relay_handler.cpp  elfin_robot_state_interface.cpp  elfin_robot_state_node.cpp  elfin_robot_status_relay_handler.cpp  elfin_utils.cpp
elfin_driver/test/: elfin_driver_gtest.cpp  elfin_robot_mockup.cpp  robot_mockup_interface.test
elfin_ros_controllers/: CMakeLists.txt  package.xml
