<?xml version="1.0"?>
<package format="2">
  <name>elfin_driver</name>
  <version>1.0.0</version>
  <description>
   <p>
     ROS-Industrial nodes for interfacing with Elfin robot controllers.
   </p>
   <p>
     This package is part of the ROS-Industrial program and contains nodes 
     for interfacing with Elfin industrial robot controllers.
   </p>
  </description>
  <author>Celestino Alvarez</author>
  <maintainer email="support@canonicalrobots.com">Support Account (Canonical Robots)</maintainer>
  <license>BSD</license>

  <url type="website">http://ros.org/wiki/elfin_driver</url>
  <url type="bugtracker">https://github.com/canonical-robots/elfin_robot/issues</url>
  <url type="repository">https://github.com/canonical-robots/elfin_robot</url>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>industrial_robot_client</depend>

</package>
